feat: soporta operaciones de tarjeta y valida contratos
